--- a/build.gradle
+++ b/build.gradle
@@ -20,14 +20,12 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-validation')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    runtimeOnly('org.postgresql:postgresql')
+    runtimeOnly('com.h2database:h2')
     implementation('org.flywaydb:flyway-core')
     implementation('org.springdoc:springdoc-openapi-ui:1.5.2')
     implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
     implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
     implementation('org.springframework.boot:spring-boot-devtools')
-    testImplementation('org.testcontainers:postgresql:1.15.1')
-    testImplementation('org.testcontainers:junit-jupiter:1.15.1')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
